# flask-project

./: .editorconfig  .env  .gitignore  Dockerfile  README.md  build_run.sh  cert.pem  docker-compose.yml  key.pem  pyproject.toml  requirements.txt  service_entrypoint.sh
data/: author-book.csv
docs/source/: README.rst  conf.py  index.rst
frontend/: package-lock.json
nginx/: nginx.conf
proxy/: Dockerfile
src/pdqs/: app-old.py  app.py  config.py  crud.py  crud.py-  database.py  database.py-  models.py  orm_entity.py  repo.py  user_admin.py  worker.py
src/pdqs/dto/: dto.py
src/pdqs/entities/: entity.py  entity.py-
src/pdqs/exception/: exception.py
src/pdqs/templates/pages/: create.html  login.html
templates/pages/: login.html
