[tool.poetry]
name = "flask-project"
version = "1.0.0"
description = ""
authors = ["Suheel Hussain <suheel_hussain@yahoo.com>"]
readme = "README.md"
packages = [{include = "pdqs", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
Flask-Migrate = "^2.7.0"
Flask-Script = "^2.0.6"
Flask-SQLAlchemy = "^3.1.1"
gunicorn = "^22.0.0"
pydantic = "^2.7.1"
psycopg2-binary = "^2.9.9"
pydantic = "2.7.1"
pydantic_core = "2.18.2"
requests = "^2.31.0"
redis = "^5.0.4"
rq = "^1.16.1"
SQLAlchemy = "2.0.29"
typing_extensions = "4.11.0"
urllib3 = "2.2.1"
Werkzeug = "3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
